--- a/style.css
+++ b/style.css
@@ -66,3 +66,9 @@ body {
     align-items: flex-end;
     padding: 10px;
 }
+
+@media only screen and (max-width: 600px) {
+   .calculator-grid{
+    transform: scale(0.8);
+   }
+  }
